# tellor-parachain-demo

./: .gitignore  .gitmodules  Dockerfile  README.md  network-config.toml  network-init.yaml  network.toml
.github/workflows/: test.yml  test_docker.yml
docker/: integration_test_setup.Dockerfile
docs/: docker-release-steps.md  docker-setup.md
init/: Cargo.toml
init/contracts/: ParachainGovernance.json  ParachainRegistry.json  ParachainStaking.json
init/src/: main.rs
init/src/chains/: asset_hub.rs  evm.rs  mod.rs  oracle_consumer.rs
integration-tests/: Cargo.toml  Dockerfile  README.md
integration-tests/contracts/: ParachainGovernance.hex  ParachainRegistry.hex  ParachainStaking.hex
integration-tests/src/: lib.rs  relay_chain.rs  tests.rs
integration-tests/src/parachains/: mod.rs  oracle_consumer.rs
integration-tests/src/parachains/evm/: mod.rs
integration-tests/src/parachains/evm/contracts/: governance.rs  mod.rs  registry.rs  staking.rs
integration-tests/xcm-emulator/: Cargo.toml  README.md
integration-tests/xcm-emulator/src/: lib.rs
scripts/: build.sh  deploy-docker.sh  deploy.sh  launch.sh
