[package]
name = "tellor-network-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
ethabi = { version = "18.0", default-features = false }
ethers = {version = "2.0", features = ["ethers-solc"]}
hex = "0.4"
k256 = { version = "0.13.1", default-features = false, features = ["ecdsa"] }
parity-scale-codec = "3.6"
scale-info = "2.9.0"
secp256k1 = "0.27.0"
serde_json = "1.0"
sp-core = "23"
sp-io = "25"
subxt = { git = "https://github.com/paritytech/subxt/", features = ["native"] }
subxt-signer = { git = "https://github.com/paritytech/subxt/", features = ["subxt"] }
tokio = { version = "1.0", features = ["macros", "time", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }