[package]
name = "tellor-parachain-integration-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
account = { git = "https://github.com/moonbeam-foundation/moonbeam", rev = "63160c774dffc68a4c3841727ed8878f7b551918" }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
ethabi = "18.0.0"
ethereum = "0.14.0"
hex-literal = "0.4"
lazy_static = "1.4.0"
tracing = { version = "0.1.37" }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "tracing-log"] }
with_builtin_macros = "0.0.3"

# Substrate
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
# remove the following after updating to polkadot 1.0
grandpa = { package = "sc-consensus-grandpa", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-authority-discovery = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

# Cumulus
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
integration-tests-common = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
xcm-emulator = { path = "xcm-emulator" }
# remove the following after updating to polkadot 1.0
beefy-primitives = { package = "sp-consensus-beefy", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-im-online = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-consensus-babe = { default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }

# Polkadot
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
# remove the following after updating to polkadot 1.0
rococo-runtime-constants = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }

# Moonbeam
pallet-asset-manager = { git = "https://github.com/moonbeam-foundation/moonbeam", rev = "63160c774dffc68a4c3841727ed8878f7b551918" }
pallet-ethereum = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-v0.9.43" }
pallet-evm = { git = "https://github.com/moonbeam-foundation/frontier", branch = "moonbeam-polkadot-v0.9.43" }
pallet-xcm = { git = "https://github.com/moonbeam-foundation/polkadot", branch = "moonbeam-polkadot-v0.9.43" }

# Tellor
tellor = { git = "https://github.com/tellor-io/tellor-pallet" }
using-tellor = { git = "https://github.com/tellor-io/tellor-pallet" }

# Runtimes
rococo-runtime = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
statemine-runtime = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
moonbeam-runtime = { git = "https://github.com/moonbeam-foundation/moonbeam", rev = "63160c774dffc68a4c3841727ed8878f7b551918" }
oracle-consumer-runtime = { package = "parachain-template-runtime", git = "https://github.com/tellor-io/substrate-parachain-node", features = ["moonbeam"] }

# Patch Moonbeam
[patch."https://github.com/moonbeam-foundation/substrate"]
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
frame-support-procedural = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-consensus-slots = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-npos-elections = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
sp-weights = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.43" }
[patch."https://github.com/moonbeam-foundation/cumulus"]
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
cumulus-primitives-core = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
parachain-info = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.43" }
[patch."https://github.com/moonbeam-foundation/polkadot"]
xcm = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.43" }